<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.WelcomeActivity"
    android:background="@drawable/ic_bg">

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:gravity="center"
        android:text="@string/name_app"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        app:cardCornerRadius="15dp"
        app:layout_constraintTop_toBottomOf="@id/tv_app_name"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/white"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="40sp"
                android:text="@string/welcome"
                android:id="@+id/tv_welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:textSize="16sp"
                android:gravity="center"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/invite"/>

            <com.google.android.material.textfield.TextInputLayout
                app:boxBackgroundMode="outline"
                app:boxStrokeWidth="2dp"
                app:boxStrokeColor="@color/design_default_color_primary"
                app:boxBackgroundColor="@color/white"
                android:padding="10dp"
                android:textColorHint="@color/design_default_color_primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:padding="10dp"
                    android:id="@+id/edt_name"
                    android:hint="@string/hint_name"
                    android:autofillHints="username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_marginBottom="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/btn_start"
                android:id="@+id/btn_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>