<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg"
    android:orientation="vertical"
    tools:context=".activities.ResultActivity">

    <TextView
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:text="@string/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageView
        android:layout_gravity="center"
        android:src="@drawable/ic_trophy"
        android:layout_width="wrap_content"
        android:layout_height="220dp"/>

    <TextView
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="32sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/congratulations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:padding="10dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="32sp"
        tools:text="Phuc cong tu"
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_score"
        android:gravity="center"
        android:textColor="@color/point"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:text="Your Score is 2 out of 3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:textAllCaps="true"
        android:gravity="center"
        android:background="@drawable/bg_button_finish"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:id="@+id/btn_finish"
        android:layout_margin="20dp"
        android:text="@string/finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>