<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
     <TextView
         android:gravity="center"
         android:padding="15dp"
         android:textSize="24sp"
         android:textColor="@color/black"
         tools:text="What country does this flag belong to?"
         android:id="@+id/tv_question"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>

     <ImageView
         android:layout_marginTop="10dp"
         android:id="@+id/img_flag"
         android:layout_gravity="center"
         tools:src="@drawable/ic_flag_of_brazil"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>

     <LinearLayout
         android:layout_margin="10dp"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
          <ProgressBar
              android:id="@+id/progress_bar"
              android:layout_weight="9"
              tools:max="10"
              tools:progress="1"
              style="@style/Widget.AppCompat.ProgressBar.Horizontal"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_margin="10dp" />

          <TextView
              android:id="@+id/tv_correct_total"
              android:layout_weight="1"
              android:textSize="24sp"
              tools:text="1/3"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"/>

     </LinearLayout>

     <LinearLayout
         android:layout_margin="20dp"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">

          <androidx.appcompat.widget.AppCompatCheckedTextView
              android:id="@+id/tv_answer1"
              android:textAllCaps="true"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_weight="2"
              android:background="@drawable/bg_answer_selected"
              android:checked="false"
              android:padding="5dp"
              android:text="@string/answer_1"
              android:textAlignment="center"
              android:textSize="24sp" />

          <androidx.appcompat.widget.AppCompatCheckedTextView
              android:id="@+id/tv_answer2"
              android:textAllCaps="true"
              android:padding="5dp"
              android:layout_marginTop="20dp"
              android:layout_weight="2"
              android:textAlignment="center"
              android:checked="false"
              android:background="@drawable/bg_answer_default"
              android:textSize="24sp"
              android:text="@string/answer_2"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>

          <androidx.appcompat.widget.AppCompatCheckedTextView
              android:id="@+id/tv_answer3"
              android:textAllCaps="true"
              android:padding="5dp"
              android:layout_marginTop="20dp"
              android:textAlignment="center"
              android:checked="false"
              android:background="@drawable/bg_answer_default"
              android:textSize="24sp"
              android:text="@string/answer_3"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>

          <androidx.appcompat.widget.AppCompatCheckedTextView
              android:id="@+id/tv_answer4"
              android:textAllCaps="true"
              android:padding="5dp"
              android:layout_marginTop="20dp"
              android:textAlignment="center"
              android:checked="false"
              android:background="@drawable/bg_answer_default"
              android:textSize="24sp"
              android:text="@string/answer_4"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>

          <Button
              android:textSize="24sp"
              android:padding="5dp"
              android:layout_marginTop="20dp"
              android:text="@string/submit"
              android:id="@+id/btn_submit"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>

     </LinearLayout>


</LinearLayout>